ATLAS-1431: changes after review